%% Implementado por Daif

classDiagram
    %% Better-Auth Core Tables
    User "1" <-- "*" Session : has many
    User "1" <-- "*" Account : has many
    User "1" <-- "*" TwoFactor : has many
    
    %% Application Tables
    User "1" <-- "*" Comment : creates
    User "1" <-- "*" CommentLike : gives
    
    Question "1" <-- "*" Comment : has many
    Comment "1" <-- "*" CommentLike : has many
    
    Question "*" <-- "*" QuestionData : through
    Category "1" --> "*" Question : contains
    Answer "1" --> "*" QuestionData : has many
    
    Segment "1" <-- "*" SegmentValue : has many
    SegmentValue "1" <-- "*" QuestionData : filters

    %% Better-Auth Tables
    class Verification {
        - id : string [PK]
        - identifier : string
        - value : string
        - expiresAt : Date
        - createdAt : Date
        - updatedAt : Date
    }

    class User {
        - id : string [PK]
        - name : string
        - email : string [UNIQUE]
        - emailVerified : boolean
        - image : string
        - role : string
        - twoFactorEnabled : boolean
        - banned : boolean
        - banReason : string
        - banExpires : Date
        - createdAt : Date
        - updatedAt : Date
    }

    class Session {
        - id : string [PK]
        - userId : string [FK]
        - token : string
        - expiresAt : Date
        - ipAddress : string
        - userAgent : string
        - createdAt : Date
        - updatedAt : Date
    }

    class Account {
        - id : string [PK]
        - userId : string [FK]
        - accountId : string
        - providerId : string
        - accessToken : string
        - refreshToken : string
        - accessTokenExpiresAt : Date
        - refreshTokenExpiresAt : Date
        - scope : string
        - idToken : string
        - password : string
        - createdAt : Date
        - updatedAt : Date
    }

    class TwoFactor {
        - id : string [PK]
        - secret : string
        - backupCodes : string
        - userId : string [FK]
    }
    
    %% Application Tables
    class Category {
        - id : uuid [PK]
        - name : string [UNIQUE]
    }

    class Question {
        - id : uuid [PK]
        - xlsxCode : string [UNIQUE]
        - value : string
        - valueShort : string
        - categoryId : uuid [FK]
    }

    class Answer {
        - id : uuid [PK]
        - value : string
    }

    class QuestionData {
        - id : uuid [PK]
        - answerId : uuid [FK]
        - questionId : uuid [FK]
        - result : numeric
        - segmentValueId : uuid [FK]
    }

    class Segment {
        - id : uuid [PK]
        - name : string [UNIQUE]
    }

    class SegmentValue {
        - id : uuid [PK]
        - name : string
        - segmentId : uuid [FK]
    }

    class Comment {
        - id : uuid [PK]
        - msgContent : string
        - userId : string [FK]
        - questionId : uuid [FK]
        - createdAt : Date
    }

    class CommentLike {
        - commentId : uuid [FK] [PK]
        - userId : string [FK] [PK]
        - createdAt : Date
    }